# engram-2

./: .gitignore  Cargo.toml  HANDOFF.md  README.md  autoresearch.toml  program.md
.autoresearch/: experiments.jsonl
benchmarks/: README.md  locomo-50-iter2-temporal-list.json  locomo-50-post-reader-fix.json  locomo-full-mini-cohere.json  locomo-qa-20260408T121349-5.json  locomo-qa-20260408T122036-50.json  locomo-qa-20260408T163306-3.json  longmemeval-qa-20260408T113922-2.json  longmemeval-qa-20260408T121047-3.json  verification-2026-04-27-engram-domain-engine.md
benchmarks/fixtures/ageing-smoke/: rapamycin-human-takeaways.md
crates/engram-bench/: Cargo.toml
crates/engram-bench/src/: error.rs  judge.rs  lib.rs  locomo.rs  locomo_plus.rs  longmemeval.rs  memoryagentbench.rs  metrics.rs  mini.rs  qa.rs  ragas.rs
crates/engram-cli/: Cargo.toml
crates/engram-cli/assets/: skill.md
crates/engram-cli/assets/agents/: openai.yaml
crates/engram-cli/src/: agent_info.rs  cli.rs  context.rs  error.rs  lib.rs  main.rs  output.rs  retrieval.rs
crates/engram-cli/src/commands/: bench.rs  budget.rs  compile.rs  config.rs  doctor.rs  documents.rs  edit.rs  entities.rs  export.rs  facts.rs  forget.rs  graph.rs  import.rs  ingest.rs  jobs.rs  kb.rs  memory.rs  mod.rs  recall.rs  reindex.rs  remember.rs  repair.rs  research.rs  serve.rs  skill.rs  update.rs  usage.rs  wiki.rs
crates/engram-cli/tests/: cli.rs
crates/engram-core/: Cargo.toml
crates/engram-core/src/: compress.rs  error.rs  fusion.rs  layers.rs  lib.rs  temporal.rs  types.rs
crates/engram-embed/: Cargo.toml
crates/engram-embed/src/: error.rs  gemini.rs  lib.rs  stub.rs
crates/engram-graph/: Cargo.toml
crates/engram-graph/src/: expand.rs  extract.rs  facts.rs  lib.rs
crates/engram-ingest/: Cargo.toml
crates/engram-ingest/src/: chunker.rs  conversations.rs  error.rs  general.rs  lib.rs  papers.rs  pdf.rs  repos.rs
crates/engram-llm/: Cargo.toml
crates/engram-llm/src/: error.rs  lib.rs  openrouter.rs
crates/engram-rerank/: Cargo.toml
crates/engram-rerank/python/: jina_reranker_v3_server.py  zerank_server.py
crates/engram-rerank/src/: cohere.rs  error.rs  lib.rs  passthrough.rs  zerank_local.rs
crates/engram-storage/: Cargo.toml
crates/engram-storage/src/: error.rs  fts.rs  lib.rs  paths.rs  sqlite.rs
docs/superpowers/specs/: 2026-04-07-engram-v2-design.md
scripts/: bench_eta.sh  download_memoryagentbench.py  eval_locomo_slice.sh  experiment.vars
thoughts/shared/handoffs/locomo-qa-pipeline/: analysis-cue-retrieval-gap.md  handoff-2026-04-11-0411.md  handoff-2026-04-11-validation.md  handoff-2026-04-11.md
thoughts/shared/handoffs/zerank2-locomo-bench/: handoff-2026-04-09-0135.md  handoff-2026-04-09-0430.md
