[package]
name = "engram-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and pure logic for engram v2 (no I/O)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
ordered-float.workspace = true

[dev-dependencies]
criterion.workspace = true
