[package]
name = "paperfoot-engram-embed"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Embedding providers (Gemini Embed 2, local fallback) for engram v2"

[lib]
name = "engram_embed"

[dependencies]
engram-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait = "0.1"
