[package]
name = "paperfoot-engram-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Chat LLM providers (OpenRouter) for answer generation and judging"

[lib]
name = "engram_llm"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait = "0.1"
tracing.workspace = true
