[package]
name = "paperfoot-engram-rerank"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Reranking providers (Cohere rerank-v3.5, passthrough) for engram v2"

[lib]
name = "engram_rerank"

[dependencies]
engram-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait = "0.1"
