[package]
name = "paperfoot-engram-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite + FTS5 storage for engram v2"

[lib]
name = "engram_storage"

[dependencies]
engram-core.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
directories.workspace = true
tracing.workspace = true
